# OSU-FM

./: .env.example  .gitignore  .releaserc  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: main.yml  release.yml
src/: env.d.ts  lib.rs  main.rs
src/api/: mod.rs
src/api/lastfm/: lastfm.rs  mod.rs  models.rs
src/api/osu/: mod.rs  models.rs  osu.rs
src/main/: verify-env.ts
src/services/lastFm/: auth.ts  generete-signature.ts  scrobble.ts
src/services/osu/: osu.ts
src/types/: index.ts
