[package]
name = "osu_fm"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.4.0"
dotenv = "0.15.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"]}
webbrowser = "1.0.3"
spinoff = "0.8.0"

[profile.release]
opt-level = 3 
lto = true    
codegen-units = 1
strip = true  
panic = "abort"
